--- a/u4s4.html
+++ b/u4s4.html
@@ -218,46 +218,47 @@
 
 <h4>Scenario 2</h4>
 
-<p>You get a $50 iTunes gift card for your birthday. Each song costs $1.29. Write an equation for how much is left on your gift card.</p>
-<p class="solution"> y = 50 - 1.29x</p>
+<p>You get a $50 Starbucks gift card for your birthday. A short latte costs $3.35. 
+  <br><br>
+  <p>Write an equation for how much is left on your gift card.</p>
+   <br>
+      <p class="solution"> \(y=-3.35x+50\), where x is the number of lattes you buy.
+    </p> 
 
 <div class="row">
   <div class="col-sm-6">
 
-<style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;}
-    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-    .tg .tg-5ua9{font-weight:bold;text-align:left}
-    .tg .tg-s268{text-align:left}
-    .tg .tg-0lax{text-align:left;vertical-align:top}
-    </style>
-    <table summary="xy table of values.  Header columns are number of songs and amount left on the card.  No header rows." class="tg">
-      <tr>
-        <th class="tg-5ua9" scope="col"><p class="solution">Number of Songs</p></th>
-        <th class="tg-5ua9" scope="col"><p class="solution">Amount Left on Card</p></th>
-      </tr>
-      <tr>
-        <td class="tg-s268"><p class="solution">1</p></td>
-        <td class="tg-s268"><p class="solution">$48.71</p></td>
-      </tr>
-      <tr>
-        <td class="tg-s268"><p class="solution">5</p></td>
-        <td class="tg-s268"><p class="solution">$43.55</p></td>
-      </tr>
-      <tr>
-        <td class="tg-s268"><p class="solution">10</p></td>
-        <td class="tg-s268"><p class="solution">$37.10</p></td>
-      </tr>
-      <tr>
-        <td class="tg-0lax"><p class="solution">20</p></td>
-        <td class="tg-0lax"><p class="solution">$24.20</p></td>
-      </tr>
-      <tr>
-        <td class="tg-0lax"><p class="solution">30</p></td>
-        <td class="tg-0lax"><p class="solution">$11.30</p></td>
-      </tr>
-    </table>
+    <style type="text/css">
+      .tg  {border-collapse:collapse;border-spacing:0;}
+      .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+      .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+      .tg .tg-5ua9{font-weight:bold;text-align:left}
+      .tg .tg-s268{text-align:left}
+      .tg .tg-0lax{text-align:left;vertical-align:top}
+      </style>
+      <table summary="xy table of values.  Header columns are number of songs and amount left on the card.  No header rows." class="tg">
+        <tr>
+          <th class="tg-5ua9" scope="col"><p class="solution">Number of Lattes</p></th>
+          <th class="tg-5ua9" scope="col"><p class="solution">Amount Left on Card</p></th>
+        </tr>
+        <tr>
+          <td class="tg-s268"><p class="solution">1</p></td>
+          <td class="tg-s268"><p class="solution">$46.65</p></td>
+        </tr>
+        <tr>
+          <td class="tg-s268"><p class="solution">5</p></td>
+          <td class="tg-s268"><p class="solution">$33.25</p></td>
+        </tr>
+        <tr>
+          <td class="tg-s268"><p class="solution">10</p></td>
+          <td class="tg-s268"><p class="solution">$16.50</p></td>
+        </tr>
+        <tr>
+          <td class="tg-0lax"><p class="solution">15</p></td>
+          <td class="tg-0lax"><p class="solution">-$0.25</p></td>
+        </tr>
+       
+      </table>
   </div>
 
     <div class="col-sm-6">
@@ -265,19 +266,19 @@
     </div>
 </div>
     <p>Domain:</p>
-    <p class="solution">Domain:  \(\begin{equation} 0 \leq x \leq 38 \end{equation} \)</p>
+    <p class="solution">Domain:  \(\begin{equation} 0 \leq x \leq 15 \end{equation} \)</p>
     <p>Range:</p>
     <p class="solution">Range:  \(\begin{equation} 0 \leq y \leq 50 \end{equation} \)</p>
     <br>
     <p>What is the y-intercept of your graph?</p>
     <p class="solution">(0,50)</p>
-    <p>How many single track songs can you buy with your gift card?</p>
-    <p class="solution">50 - 1.29x = 0</p>
-    <p class="solution">-1.29x = -50</p>
-    <p class="solution">x = 38.76</p>
-    <p class="solution">You can buy 38 songs with a $50 gift card.</p>
+    <p>How many short lattes can you buy with your gift card?</p>
+    <p class="solution">50 - 3.35x = 0</p>
+    <p class="solution">-3.35x = -50</p>
+    <p class="solution">x = 14.93</p>
+    <p class="solution">You can buy 14 lattes with a $50 gift card.</p>
     
-    <p class="solution"><img src="images/u4s4p2k.png" alt="A linear graph that decreases from left to right. The x-axis represents the number of songs that are purchased and goes from 0 to 36 counting by 2. The y-axis represents the amount left on the card and goes from 0 to 60 counting by 5. The points that are plotted on the graph are (1,48.71), (5,43.55), (10,37.10), (20,24.20), and (30,11.30). "></p>
+    <p class="solution"> <img src="images/u4s4p2k.png" alt="A linear graph that decreases from left to right. The x-axis represents the number of lattes that are purchased and goes from 0 to 16 counting by 1. The y-axis represents the amount left on the card and goes from 0 to 60 counting by 10. The points that are plotted on the graph are (1,46.651), (5,33.25), (10,16.50), (15,-0.25). "></p>
 
     <p style="page-break-before: always"></p>
 
