--- a/u4s6.html
+++ b/u4s6.html
@@ -167,7 +167,8 @@ forces a conclusion by artificially limiting the available options</p>
 attacks the opponent’s character or personal traits in an attempt to undermine the argument</p>
 <p><strong>Straw man:</strong>
 misrepresents someone’s argument to make it easier to attack</p>
-
+<p><strong>Appeal to Emotion:</strong>
+  uses emotional appeals, such as pity, fear, and joy, instead of relevant facts and logic to support a claim.</p>
  
  
  
