--- a/u4s7.html
+++ b/u4s7.html
@@ -208,26 +208,36 @@
         <strong>An If…Then statement is called a conditional statement because it proposes something to be true (the then part of the statement) on the condition that something else is true (the if part of the statement).</strong>
         <p> The If part of the statement is called the hypothesis and the THEN part of the statement is called the conclusion. A conditional statement is defined to be true unless a true hypothesis leads to a false conclusion.</p>
         <li>
-                <strong>If you make an A in this class, I will buy you a new car.</strong>
-               <p> “You make an A in this class" is the hypothesis and "I buy you a new car" is the conclusion.</p>
-                In which cases did I tell the truth when I made the conditional statement?
+                <strong>If we turn off the water in the shower, then the water will stop pouring.</strong>
+               <p> “We turned off the water in the shower" is the hypothesis and "the water will stop pouring" is the conclusion.</p>
+               <br>
+                Assuming we do turn off the water and it did stop, in which cases below I tell the truth when I made the conditional statement?
                 <ul>
-                <li>You made an A in the class and I bought you a new car. (T→T)
+                <li>We turned off the water and the water stopped. (T→T)
                         <p class="solution"> True</p>
                 </li>
-                <li>You made an A in the class and I did not buy you a new car.  (T→F)
+                <li>We turned off the water and the water did not stop.  (T→F)
                         <p class="solution"> False</p>
                 </li>
-                <li>You did not make an A in the class and I did not buy you a new car.  (F→F)
+                <li>We did NOT turn off the water and the water did not stop.  (F→F)
                         <p class="solution"> True</p>
                 </li>
-                <li>You did not make an A in the class and I bought you a new car.  (F→T)
+                <li>We did NOT turn off the water and the water did not stop.  (F→T)
                         <p class="solution"> True</p>
                 </li>
                     
                 	
             </ul>
         </li>
+        <li>
+          Determine if the following conditional statements are true or false.
+          <ol>
+            <li>If February has 29 days, then it is a leap year.</li>
+            <li>If it is raining, then there are no clouds in the sky.</li>
+            <li>If the sun is made of rock, then 4 is a prime number.</li>
+          </ol>
+        </li>
+        <br><br>
         <h4>Statements Related to Conditional Statements</h4>
                <p> <strong>Statement:</strong> If p, then q.</p>
                <p></p> <strong>Converse:</strong> If q, then p.</p>
@@ -235,7 +245,7 @@
                <p>  <strong>Contrapositive:</strong> If not q, then not p.</p>
                <p>Two statements are logically equivalent if they are both true OR if they are both false.</p>
               <li>  Write the converse, inverse, and contrapositive of the following proposition and determine which pairs are equivalent.
-               <p> If you make an A in the class, then I will buy you a new car.</p>
+               <p><strong> If you make an A in the class, then I will buy you a new car.</strong></p>
                <p class="solution"> Converse: If I buy you a new car, then you make an A in the class.</p>
                <p class="solution"> Inverse:If you do not make an A in the class, then I will not buy you a new car.</p>
                <p class="solution"> Contrapositive: If I will not buy you a new car, then you do not make an A in the class.</p>
