--- a/u1review.html
+++ b/u1review.html
@@ -167,7 +167,7 @@
 
 <li>Greg got himself into trouble with credit card debt. He owes $3900 on his credit card.  If he never uses his credit card again, but pays off his debt in 5 years at 19% interest, what are his monthly payments to the credit card company?</li>
 <p class="solution">Greg's monthly credit card payments are $101.17.</p>
-
+<p style="page-break-before: always"></p>
 <li>The average price for a gallon of gasoline in the US was $3.01 in October of 2010. In June of 2019 it was $2.50. What was the percent decrease in the average price of a gallon of gas?</li>
 <p class="solution">The average price for a gallon of gas decreased by 16.9%.</p>
 
