--- a/u3fs.html
+++ b/u3fs.html
@@ -216,7 +216,7 @@
      \( C = \pi d\) or  \( C = 2 \pi r\) </p>
 
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-6">
 
     <p>1 m, L, g, W = 1000 milli(m, L, g, W)</p>
     <p>1 m, L, g, W = 100 centi(m, L, g, W)</p>
@@ -224,7 +224,7 @@
 
     <p>10 milli(m, L, g, W) = 1 centi(m, L, g, W)</p>
       </div>
-  <div class="col-sm-4">
+  <div class="col-sm-3">
 
     <p>1 foot = 12 inches</p>
     <p>1 yard = 3 feet</p>
@@ -238,28 +238,28 @@
     <p>1 cup = 8 ounces</p>
   </div>
 
-  <div class="col-sm-4">
+  <div class="col-sm-3">
 
-    <p> \(\begin{equation}
-        1 \text { inch } \approx 2.54
-        \text{ centimeters} \end{equation} \)</p>
-        <p> \(\begin{equation}
-            1 \text { meter } \approx 1.09
-            \text{ yards} \end{equation} \)</p>
+    <p> 
+        1 inch  \(\approx\) 2.54
+        centimeters </p>
+        <p> 
+            1 meter \(\approx\) 1.09
+            yards  </p>
 
-            <p> \(\begin{equation}
-                1 \text { mile } \approx 1.61
-                \text{ kilometers} \end{equation} \)</p>   
+        <p> 
+                1 mile  \(\approx\) 1.61
+                kilometers</p>   
                 
-                <p> \(\begin{equation}
-                    1 \text { kilogram } \approx 2.20
-                    \text{ pounds} \end{equation} \)</p>        
-                    <p> \(\begin{equation}
-                        1 \text { liter } \approx 0.2642
-                        \text{ gallons} \end{equation} \)</p>
-                        <p> \(\begin{equation}
-                            1 \text { ft }^{3} \approx 7.48
-                            \text{ gallons} \end{equation} \)</p>
+        <p> 
+                    1 kilogram  \(\approx\) 2.20
+                    pounds</p>        
+        <p> 
+                        1 liter \(\approx\) 0.2642
+                         gallons</p>
+          <p> 
+                            1 \({ ft }^{3}\) \(\approx\)  7.48
+                             gallons</p>
 
   </div>
                           </div>
