--- a/u2s3.html
+++ b/u2s3.html
@@ -276,31 +276,31 @@
 </li>
 
 <li>
-    In 2011, one minute of prime-time television advertising time cost $110,000. The equation that models this situation is
+    In 2021, the average cost for thirty seconds of prime-time television advertising time was $120,000. The equation that models this situation is
 
-    <p>\(y=110000x\)</p>
+    <p>\(y=120000x\)</p>
 
-    <p>where x is the number of advertising minutes and y is the cost of each advertisement.  The graph is a linear graph and is shown below.</p>
+    <p>where x is the number of 30-second ads and y is the cost of each advertisement.  The graph is a linear graph and is shown below.</p>
 
     <img src="images/u2s3p2.png" alt="The graph is linear and increases from left to right. The x-axis represents the number of minutes in advertising time and goes from 0 to 10. The y-axis represents the cost of the advertisements and goes from 0 to 1,200,000. The graph is constructed according to the equation y=110000x.">
 
     <ol>
 
 
-<li>If an advertisement is 6 minutes long, what is the approximate cost of the advertisement? State your answer in a complete sentence.</li>
-<p class="solution">The approximate cost of a 6 minute ad is $660,000</p>
+<li>If a company buys 6 30-second ads, what is the approximate cost of the advertisements? State your answer in a complete sentence.</li>
+<p class="solution">The approximate cost of a 6 30-second ads is $720,000</p>
 
-<li>If the cost of one advertisement is approximately $500,000, how long is the advertisement? State your answer in a complete sentence.</li>
-<p class="solution">A $500,000 ad is approximately 4.5 minutes long.</p>
+<li>If the cost of one ad buy is approximately $500,000, many 30-second ads were bought? State your answer in a complete sentence.</li>
+<p class="solution">A $500,000 ad is approximately 4 30-second ads.</p>
 
 <li>What is the cost of a twelve-minute advertisement? How did you find this answer?</li>
-<p class="solution">\(y = 110000 \cdot 12 = $1320000\)</p>
+<p class="solution">\(y = 120,000 \cdot 12 = $1,440,000\)</p>
 
 <li>The graph is increasing from left to right. In a complete sentence, explain this.</li>
-<p class="solution">As the number of advertising minutes increases, the cost of the ad increases.</p>
+<p class="solution">As the number of 30-second ads increases, the cost of the ad increases.</p>
 
-<li>	The point (-2, -220000) would lie on this line if the bounds for the x-axis and the y-axis included negative numbers. Is this a valid point for this situation? In a complete sentence, explain why or why not.</li>
-<p class="solution">No. An ad cannot run for -2 minutes and an ad cannot cost a negative amount of money.</p>
+<li>	The point (-2, -240000) would lie on this line if the bounds for the x-axis and the y-axis included negative numbers. Is this a valid point for this situation? In a complete sentence, explain why or why not.</li>
+<p class="solution">No. An ad cannot run for -1 minutes and an ad cannot cost a negative amount of money.</p>
 
     </ol>
 
