--- a/u2s8.html
+++ b/u2s8.html
@@ -325,7 +325,7 @@
 <p class="solution">$130 M</p>
 
 <p><b>BOXPLOT</b></p>
-<p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Pay. The x-axis on the box plot is numbered from 0 to 300 and counting by 20. the left whisker is at 44.5, the minimum number, and the right whisker is at 285, the maximum number. The box that is drawn contains the lower quartile at 51, the median at 76.9 and the upper quartile at 99." ></p>
+<p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Pay. The x-axis on the box plot is numbered from 0 to 130 and counting by 5. the left whisker is at 68, the minimum number, and the right whisker is at 130, the maximum number. The box that is drawn contains the lower quartile at 76.8, the median at 90 and the upper quartile at 93.9." ></p>
 
 
 <p>Standard Deviation:</p>
@@ -337,34 +337,34 @@
 <p style="page-break-before: always"></p>
 
 
-<p><b>ENDORSEMENTS</b></p>
+<p><b>OFF-THE-FIELD EARNINGS</b></p>
 
 <p>Mean:</p>
-<p class="solution">$24.2 M</p>
+<p class="solution">$43.1 M</p>
 <p>Median:</p>
-<p class="solution">$19 M</p>
+<p class="solution">$47 M</p>
 <p>Mode:</p>
-<p class="solution">$19 M</p>
+<p class="solution">$55 M</p>
 <p>Range:</p>
-<p class="solution">$63 M</p>
+<p class="solution">$87.5 M</p>
 
 <p><b>Quartiles</b></p>
-<p>Low:</p>
-<p class="solution">$2 M</p>
+<p>Low (Min):</p>
+<p class="solution">$2.5 M</p>
 <p>Lower Quartile:</p>
-<p class="solution">$9 M</p>
+<p class="solution">$25 M</p>
 <p>Median:</p>
-<p class="solution">$19 M</p>
+<p class="solution">$47 M</p>
 <p>Upper Quartile:</p>
-<p class="solution">$42 M</p>
-<p>High:</p>
-<p class="solution">$65 M</p>
+<p class="solution">$55 M</p>
+<p>High (Max):</p>
+<p class="solution">$90 M</p>
 
 <p><b>BOXPLOT</b></p>
-<p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Endorsements. The x-axis is in millions of dollars and goes from 0 to 100, counting by 10. The left whisker is at 2, the minimum number, and the right whisker is at 65, the maximum number. The box that is drawn contains the lower quartile at 9, the median at 19 and the upper quartile at 42." ></p>
+<p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Off-the-field Earnings. The x-axis is in millions of dollars and goes from 0 to 95, counting by 5. The left whisker is at 2.5, the minimum number, and the right whisker is at 90, the maximum number. The box that is drawn contains the lower quartile at 25, the median at 47 and the upper quartile at 55." ></p>
 
 <p>Standard Deviation and Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">$18.8 M and $15.8 M</p>
+<p class="solution">$25.78 M and $21.88 M</p>
 
 
 
