--- a/u2s8.html
+++ b/u2s8.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -154,7 +155,7 @@
 
 
     <p style="page-break-before: always"></p>
-      <h4>The World's Highest-Paid Athletes 2018</h4>
+      <h4>The World's Highest-Paid Athletes 2022</h4>
      
       <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;}
@@ -162,209 +163,209 @@
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
         .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
         </style>
-        <table summary="World's highest paid athletes 2018.  Column headers are rank, name, total pay, salary/winnings, endorsements, and sport.  Row headings are rank." class="tg">
+        <table summary="World's highest paid athletes 2022.  Column headers are rank, name, total pay, salary/winnings, endorsements, and sport.  Row headings are rank." class="tg">
           <tr>
             <th class="tg-13pz"scope="row">Rank</th>
             <th class="tg-13pz" scope="row">Name</th>
             <th class="tg-13pz" scope="row">Total Pay</th>
-            <th class="tg-13pz" scope="row">Salary/Winnings</th>
-            <th class="tg-13pz" scope="row">Endorsements</th>
+            <th class="tg-13pz" scope="row">On-the-Field Earnings</th>
+            <th class="tg-13pz" scope="row">Off-the-Field Earnings</th>
             <th class="tg-13pz" scope="row">Sport</th>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#1</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/floyd-mayweather/?list=athletes#6fc860432e8a" target="_blank" >Floyd Mayweather</a></td>
-            <td class="tg-13pz">$285 M</td>
-            <td class="tg-13pz">$275 M</td>
-            <td class="tg-13pz">$10 M</td>
-            <td class="tg-13pz">Boxing</td>
-          </tr>
-          <tr>
-            <th class="tg-13pz" scope="row">#2</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/lionel-messi/?list=athletes#4929b14e5e9f" target="_blank">Lionel Messi</a></td>
-            <td class="tg-13pz">$111 M</td>
-            <td class="tg-13pz">$84 M</td>
-
-            <td class="tg-13pz">$27 M</td>
-
+            <td class="tg-13pz">Lionel Messi</td>
+            <td class="tg-13pz">$130 M</td>
+            <td class="tg-13pz">$75 M</td>
+            <td class="tg-13pz">$55 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
+            <th class="tg-13pz" scope="row">#2</th>
+            <td class="tg-13pz"> LeBron James</td>
+            <td class="tg-13pz">$121.2 M</td>
+            <td class="tg-13pz">$41.2 M</td>
+
+            <td class="tg-13pz">$80 M</td>
+
+            <td class="tg-13pz">Basketball</td>
+          </tr>
+          <tr>
             <th class="tg-13pz" scope="row">#3</th>
-            <td class="tg-13pz"><a href="https://www.forbes.com/profile/cristiano-ronaldo/?list=athletes#5d980ab6565d" target="_blank">Cristiano Ronaldo</a></td>
-            <td class="tg-13pz">$108 M</td>
-            <td class="tg-13pz">$61 M</td>
-            <td class="tg-13pz">$47 M</td>
+            <td class="tg-13pz">Cristiano Ronaldo</td>
+            <td class="tg-13pz">$115 M</td>
+            <td class="tg-13pz">$60 M</td>
+            <td class="tg-13pz">$55 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#4</th>
-            <td class="tg-13pz"><a href="https://www.forbes.com/profile/conor-mcgregor/?list=athletes#7409e5b17595" target="_blank">Conor McGregor</a></td>
-            <td class="tg-13pz">$99 M</td>
-            <td class="tg-13pz">$85 M</td>
-            <td class="tg-13pz">$14 M</td>
-            <td class="tg-13pz">Mixed Martial Arts</td>
-          </tr>
-          <tr>
-            <th class="tg-13pz" scope="row">#5</th>
-            <td class="tg-13pz"><a href="https://www.forbes.com/profile/neymar/?list=athletes#18ab2708695c" target="_blank" >Neymar</a></td>
-            <td class="tg-13pz">$90 M</td>
-            <td class="tg-13pz">$71 M</td>
-            <td class="tg-13pz">$19 M</td>
+            <td class="tg-13pz">Neymar</td>
+            <td class="tg-13pz">$95 M</td>
+            <td class="tg-13pz">$70 M</td>
+            <td class="tg-13pz">$25 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
+            <th class="tg-13pz" scope="row">#5</th>
+            <td class="tg-13pz">Stephen Curry</td>
+            <td class="tg-13pz">$92.8 M</td>
+            <td class="tg-13pz">$45.8 M</td>
+            <td class="tg-13pz">$47 M</td>
+            <td class="tg-13pz">Basketball</td>
+          </tr>
+          <tr>
             <th class="tg-13pz" scope="row">#6</th>
-            <td class="tg-13pz"><a href="https://www.forbes.com/profile/lebron-james/?list=athletes#681c638e2398" target="_blank">Lebron James</a></td>
-            <td class="tg-13pz">$85.5 M</td>
-            <td class="tg-13pz">$33.5 M</td>
-            <td class="tg-13pz">$52 M</td>
+            <td class="tg-13pz">Kevin Durant</td>
+            <td class="tg-13pz">$92.1 M</td>
+            <td class="tg-13pz">$42.1 M</td>
+            <td class="tg-13pz">$50 M</td>
             <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#7</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/roger-federer/?list=athletes#69fd5e6114ba" target="_blank"> Roger Federer</a></td>
-            <td class="tg-13pz">$77.2 M</td>
-            <td class="tg-13pz">$12.2 M</td>
-            <td class="tg-13pz">$65 M</td>
+            <td class="tg-13pz">  Roger Federer</td>
+            <td class="tg-13pz">$90.7 M</td>
+            <td class="tg-13pz">$0.7 M</td>
+            <td class="tg-13pz">$90 M</td>
             <td class="tg-13pz">Tennis</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#8</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/stephen-curry/?list=athletes#280e4272437c" target="_blank"> Stephen Curry</a></td>
-            <td class="tg-13pz">$76.9 M</td>
-            <td class="tg-13pz">$34.9 M</td>
-            <td class="tg-13pz">$42 M</td>
-            <td class="tg-13pz">Basketball</td>
+            <td class="tg-13pz"> Canelo Alvarez</td>
+            <td class="tg-13pz">$90 M</td>
+            <td class="tg-13pz">$85 M</td>
+            <td class="tg-13pz">$5 M</td>
+            <td class="tg-13pz">Boxing</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#9</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/matt-ryan/?list=athletes#7ccf07b73863" target="_blank"> Matt Ryan</a></td>
-            <td class="tg-13pz">$67.3 M</td>
-            <td class="tg-13pz">$62.3 M</td>
-            <td class="tg-13pz">$5 M</td>
+            <td class="tg-13pz"> Tom Brady</td>
+            <td class="tg-13pz">$83.9 M</td>
+            <td class="tg-13pz">$31.9 M</td>
+            <td class="tg-13pz">$52 M</td>
             <td class="tg-13pz">Football</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#10</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/matthew-stafford/?list=athletes#23ffaf1f1aef" target="_blank"> Matthew Stafford</a></td>
-            <td class="tg-13pz">$59.5 M</td>
-            <td class="tg-13pz">$57.5 M</td>
-            <td class="tg-13pz">$2 M</td>
-            <td class="tg-13pz">Football</td>
+            <td class="tg-13pz"> Giannis Antetokounmpo</td>
+            <td class="tg-13pz">$80.9 M</td>
+            <td class="tg-13pz">$39.9 M</td>
+            <td class="tg-13pz">$41 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#11</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/kevin-durant/?list=athletes#4a06872377e6" target ="_blank"> Kevin Durant</a></td>
-            <td class="tg-13pz">$57.3 M</td>
-            <td class="tg-13pz">$25.3 M</td>
-            <td class="tg-13pz">$32 M</td>
+            <td class="tg-13pz"> Russell Westbrook</td>
+            <td class="tg-13pz">$79.2 M</td>
+            <td class="tg-13pz">$44.2 M</td>
+            <td class="tg-13pz">$35 M</td>
             <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#12</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/lewis-hamilton/?list=athletes#199123de142a" target="_blank"> Lewis Hamilton</a></td>
-            <td class="tg-13pz">$51 M</td>
-            <td class="tg-13pz">$42 M</td>
-            <td class="tg-13pz">$9 M</td>
-            <td class="tg-13pz">Auto Racing</td>
+            <td class="tg-13pz"> James Harden</td>
+            <td class="tg-13pz">$74.4 M</td>
+            <td class="tg-13pz">$44.4 M</td>
+            <td class="tg-13pz">$30 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#13</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/russell-westbrook/?list=athletes#1201dabe2f40" target="_blank"> Russell Westbrook</a></td>
-            <td class="tg-13pz">$47.6 M</td>
-            <td class="tg-13pz">$28.6 M</td>
-            <td class="tg-13pz">$19 M</td>
-            <td class="tg-13pz">Basketball</td>
+            <td class="tg-13pz"> Matthew Stafford</td>
+            <td class="tg-13pz">$72.3 M</td>
+            <td class="tg-13pz">$69.8 M</td>
+            <td class="tg-13pz">$2.5 M</td>
+            <td class="tg-13pz">Football</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#14</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/james-harden/?list=athletes#4d028e4e10aa" target="_blank"> James Harden</a></td>
-            <td class="tg-13pz">$46.4 M</td>
-            <td class="tg-13pz">$28.4 M</td>
-            <td class="tg-13pz">$18 M</td>
-            <td class="tg-13pz">Basketball</td>
+            <td class="tg-13pz">Aaron Rodgers</td>
+            <td class="tg-13pz">$68 M</td>
+            <td class="tg-13pz">$57 M</td>
+            <td class="tg-13pz">$11 M</td>
+            <td class="tg-13pz">Football</td>
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">#15</th>
-            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/canelo-alvarez/?list=athletes#649340d95a8d" target="_blank"> Canelo Alvarez</a></td>
-            <td class="tg-13pz">$44.5 M</td>
-            <td class="tg-13pz">$42 M</td>
-            <td class="tg-13pz">$2.5 M</td>
-            <td class="tg-13pz">Boxing</td>
+            <td class="tg-13pz">  Tiger Woods</td>
+            <td class="tg-13pz">$68 M</td>
+            <td class="tg-13pz">$0.04 M</td>
+            <td class="tg-13pz">$68 M</td>
+            <td class="tg-13pz">Golf</td>
           </tr>
         </table>
-<p>Source <a href="https://www.forbes.com/athletes/list/#tab:overall" target="_blank">Highest Paid Athletes List From Forbes</a> </p>
+<p>Source <a href="https://www.forbes.com/athletes/" target="_blank">Highest Paid Athletes List From Forbes</a> </p>
 
 
 
 <p><b>TOTAL PAY</b></p>
 <p>Mean:</p>
 
-<p class="solution">$87.08 M</p>
+<p class="solution">$90.23 M</p>
 <p>Median:</p>
-<p class="solution">$76.9 M</p>
+<p class="solution">$90 M</p>
 <p>Mode:</p>
-<p class="solution">No mode</p>
+<p class="solution">68</p>
 <p>Range:</p>
-<p class="solution">$240.5 M</p>
+<p class="solution">$62 M</p>
 
 
 
 
 <p><b>Quartiles</b></p>
-<p>Low:</p>
-<p class="solution">$44.5 M</p>
+<p>Low (Min):</p>
+<p class="solution">$68 M</p>
 <p>Lower Quartile:</p>
-<p class="solution">$51 M</p>
+<p class="solution">$74.4 M</p>
 <p>Median:</p>
-<p class="solution">$76.9 M</p>
+<p class="solution">$90 M</p>
 <p>Upper Quartile:</p>
-<p class="solution">$99 M</p>
-<p>High:</p>
-<p class="solution">$285 M</p>
+<p class="solution">$95</p>
+<p>High (Max):</p>
+<p class="solution">$130 M</p>
 
 <p><b>BOXPLOT</b></p>
-<p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Pay. The x-axis on the box plot is numbered from 0 to 300 and counting by 20. the left whisker is at 44.5, the minimum number, and the right whisker is at 285, the maximum number. The box that is drawn contains the lower quartile at 51, the median at 76.9 and the upper quartile at 99." ></p>
+<p class="solution"> <img src="images/u2s8p1.png"  alt="The title of the box plot is Total Pay. The x-axis on the box plot is numbered from 0 to 130 and counting by 5. the left whisker is at 68, the minimum number, and the right whisker is at 130, the maximum number. The box that is drawn contains the lower quartile at 76.8, the median at 90 and the upper quartile at 93.9." ></p>
 
 
 <p>Standard Deviation:</p>
-<p class="solution">$57.1 M</p>
+<p class="solution">$18.89 M</p>
 
 <p>Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">$60.1 M</p>
+<p class="solution">$15.5 M</p>
 
 <p style="page-break-before: always"></p>
 
 
-<p><b>ENDORSEMENTS</b></p>
+<p><b>OFF-THE-FIELD EARNINGS</b></p>
 
 <p>Mean:</p>
-<p class="solution">$24.2 M</p>
+<p class="solution">$43.1 M</p>
 <p>Median:</p>
-<p class="solution">$19 M</p>
+<p class="solution">$47 M</p>
 <p>Mode:</p>
-<p class="solution">$19 M</p>
+<p class="solution">$55 M</p>
 <p>Range:</p>
-<p class="solution">$63 M</p>
+<p class="solution">$87.5 M</p>
 
 <p><b>Quartiles</b></p>
-<p>Low:</p>
-<p class="solution">$2 M</p>
+<p>Low (Min):</p>
+<p class="solution">$2.5 M</p>
 <p>Lower Quartile:</p>
-<p class="solution">$9 M</p>
+<p class="solution">$25 M</p>
 <p>Median:</p>
-<p class="solution">$19 M</p>
+<p class="solution">$47 M</p>
 <p>Upper Quartile:</p>
-<p class="solution">$42 M</p>
-<p>High:</p>
-<p class="solution">$65 M</p>
+<p class="solution">$55 M</p>
+<p>High (Max):</p>
+<p class="solution">$90 M</p>
 
 <p><b>BOXPLOT</b></p>
-<p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Endorsements. The x-axis is in millions of dollars and goes from 0 to 100, counting by 10. The left whisker is at 2, the minimum number, and the right whisker is at 65, the maximum number. The box that is drawn contains the lower quartile at 9, the median at 19 and the upper quartile at 42." ></p>
+<p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Off-the-field Earnings. The x-axis is in millions of dollars and goes from 0 to 95, counting by 5. The left whisker is at 2.5, the minimum number, and the right whisker is at 90, the maximum number. The box that is drawn contains the lower quartile at 25, the median at 47 and the upper quartile at 55." ></p>
 
 <p>Standard Deviation and Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">$18.8 M and $15.8 M</p>
+<p class="solution">$25.78 M and $21.88 M</p>
 
 
 
@@ -388,3 +389,4 @@
 </body>
 
 </html>
+
