--- a/u4s6.html
+++ b/u4s6.html
@@ -170,7 +170,8 @@ misrepresents someone’s argument to make it easier to attack</p>
 <p><strong>Appeal to Emotion:</strong>
   uses emotional appeals, such as pity, fear, and joy, instead of relevant facts and logic to support a claim.</p>
  
- 
+  <p><strong>Slippery Slope:</strong>
+    a course of action is rejected because, with little or no evidence, one insists that it will lead to a chain reaction resulting in an undesirable end or ends.</p>
  
  
  
@@ -301,8 +302,8 @@ misrepresents someone’s argument to make it easier to attack</p>
 
 
         <li>(A debate before the city council):
-            <p>Opponent: Because of the killing and suffering of Indians that followed Columbus's discovery of America, the City of Berkeley should declare that Columbus Day will no longer be observed in our city.</p>
-           <p> Speaker: This is ridiculous, fellow members of the city council. It's not true that everybody who ever came to America from another country somehow oppressed the Indians. I say we should continue to observe Columbus Day, and vote down this resolution that will make the City of Berkeley the laughing stock of the nation.</p>
+            <p>Opponent: Because of the killing and suffering of Native Americans that followed Columbus's discovery of America, the City of Berkeley should declare that Columbus Day will no longer be observed in our city.</p>
+           <p> Speaker: This is ridiculous, fellow members of the city council. It's not true that everybody who ever came to America from another country somehow oppressed the Native Americans. I say we should continue to observe Columbus Day, and vote down this resolution that will make the City of Berkeley the laughing stock of the nation.</p>
            <p class="solution"> Fallacy (Straw Man) The speaker turns around the
               opponent’s statement to claim that the opponent is saying everyone who immigrated to
               America oppressed the Indians.</p>
