--- a/u4s7.html
+++ b/u4s7.html
@@ -222,7 +222,7 @@
                 <li>We did NOT turn off the water and the water did not stop.  (F→F)
                         <p class="solution"> True</p>
                 </li>
-                <li>We did NOT turn off the water and the water did not stop.  (F→T)
+                <li>We did NOT turn off the water and the water did stop.  (F→T)
                         <p class="solution"> True</p>
                 </li>
                     
@@ -233,8 +233,11 @@
           Determine if the following conditional statements are true or false.
           <ol>
             <li>If February has 29 days, then it is a leap year.</li>
+            <p class="solution"> True</p>
             <li>If it is raining, then there are no clouds in the sky.</li>
+            <p class="solution"> False</p>
             <li>If the sun is made of rock, then 4 is a prime number.</li>
+            <p class="solution"> True</p>
           </ol>
         </li>
         <br><br>
