--- a/u1s11.html
+++ b/u1s11.html
@@ -529,7 +529,7 @@
     <table summary="Chart to calculate taxes owed.  Column headers are tax rate, single, amount of income to be taxed in this range, taxed owed on this part of income.  Row headers are income ranges." class="tg">
         <tr>
           <th class="tg-13pz" scope="col">Tax Rate</th>
-          <th class="tg-13pz" scope="col">Single</th>
+          <th class="tg-13pz" scope="col">Married Filing Jointly</th>
           <th class="tg-13pz" scope="col">Amount of income to<br>be taxed in this range</th>
           <th class="tg-13pz" scope="col">Taxes owed on this part<br>of income</th>
         </tr>
