--- a/u1s6.html
+++ b/u1s6.html
@@ -547,7 +547,7 @@
        
         </div>
         </div>
-
+        <p style="page-break-before: always"></p>
         <div class="row">
             <div class="col-sm-6">
 
