--- a/u3review.html
+++ b/u3review.html
@@ -208,7 +208,7 @@
 
 <p class="solution">\(\frac{60\;miles}{1\;hour}\times\frac{1\;hour}{60\;min}\times\frac{1\;min}{60\;sec}\times\frac{5280\;ft}{1\;mile}=88 \;feet\; per\; second\)</p>
 
-<li>If a person weighs 125 lbs, 8 oz., how many milligrams does s/he weigh?</li>
+<li>If a person weighs 125 lbs, 8 oz., how many milligrams do they weigh?</li>
 
 <p class="solution">\(\frac{128.5\;lbs}{\;person}\times\frac{1\;kg}{2.2\;lbs}\times\frac{1000\;g}{1\;kg}\times\frac{1000\;mg}{1\;g}=57,045,454.55\; mg\)</p>
 
